fixed menu: when open a practice task - it's wrap automatically

--- a/src/Navigation/navigation.scss
+++ b/src/Navigation/navigation.scss
@@ -21,6 +21,14 @@
   }
 }
 
+.navigation__wrapper {
+  display: flex;
+}
+
+.navigation__wrapper__hidden {
+  display: none;
+}
+
 .navigation__links {
   list-style: none;
   margin: 0;
